Added plugins new